--- a/static/css/all_projects.sass
+++ b/static/css/all_projects.sass
@@ -1,6 +1,3 @@
-.content
-    padding: 2rem
-    min-height: 70vh
 
 .img-top-content
     position: relative
@@ -40,5 +37,20 @@
 
 @media (min-width: 576px)
     .modal-dialog 
-        max-width: calc(100% - 25rem) !important
+        max-width: calc(100% - 15rem) !important
         margin: 1rem auto
+
+.space
+    min-height: 2rem
+
+.algo
+    color: #00f !important
+
+.pad
+    margin-right: 2rem
+
+.launch
+    padding: 1rem !important
+
+.project
+    margin: 1rem auto
