--- a/static/css/all_projects.css
+++ b/static/css/all_projects.css
@@ -1,8 +1,3 @@
-.content {
-  padding: 2rem;
-  min-height: 70vh;
-}
-
 .img-top-content {
   position: relative;
 }
@@ -11,21 +6,17 @@
   max-height: 16rem;
   opacity: 1;
   display: block;
-  -webkit-transition: .5s ease;
   transition: .5s ease;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .centered-content {
-  -webkit-transition: .5s ease;
   transition: .5s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
@@ -47,15 +38,32 @@
 }
 
 .date {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 @media (min-width: 576px) {
   .modal-dialog {
-    max-width: calc(100% - 25rem) !important;
+    max-width: calc(100% - 15rem) !important;
     margin: 1rem auto;
   }
 }
-/*# sourceMappingURL=all_projects.css.map */
+
+.space {
+  min-height: 2rem;
+}
+
+.algo {
+  color: #00f !important;
+}
+
+.pad {
+  margin-right: 2rem;
+}
+
+.launch {
+  padding: 1rem !important;
+}
+
+.project {
+  margin: 1rem auto;
+}
