Weight prediction - weight not shown error cleared

--- a/templates/weight_predictor.html
+++ b/templates/weight_predictor.html
@@ -72,7 +72,7 @@
 	      	</div>
 	      	<div class="row">
 	      		<div class="col"><h6 class="text-center">Weight in pounds</h6></div>
-	      		<div class="col"><h6 class="text-center">{{ weight_predicted[0] }}</h6></div>
+	      		<div class="col"><h6 class="text-center">{{ weight_predicted }}</h6></div>
 	      	</div>
 	      </div>
 	      <div class="modal-footer">
