Boston House Price Prediction completed

--- a/static/css/weight.sass
+++ b/static/css/weight.sass
@@ -1,2 +1,10 @@
 .space
     min-height: 1rem
+
+
+    
+@media (min-width: 576px)
+    .modal-dialog 
+        max-width: calc(100% - 15rem) !important
+        margin: 1rem auto
+
