--- a/templates/weight_predictor.html
+++ b/templates/weight_predictor.html
@@ -42,7 +42,7 @@
 	<div class="space"></div>
 
 
-	<!-- Gender Classifier Modal -->
+	<!-- Weight Prediction Modal -->
 	{% if weight_predicted %}
 	<div class="modal fade" id="loanStatus" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	  <div class="modal-dialog">
